working on piepline

--- a/etl/docker/docker-compose.yml
+++ b/etl/docker/docker-compose.yml
@@ -22,21 +22,20 @@ services:
       timeout: 5s
       retries: 5
 
-  adminer:
-    image: adminer:latest
-    container_name: marigold-adminer
+  pgweb:
+    image: sosedoff/pgweb:latest
+    container_name: marigold-pgweb
     ports:
-      - '${ADMINER_PORT:-9000}:8080'
+      - '${PGWEB_PORT:-8081}:8081'
+    environment:
+      DATABASE_URL: postgres://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@postgres:5432/${DB_NAME:-marigold_rag}?sslmode=disable
     networks:
       - marigold
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
 
 networks:
   marigold:
-    driver: bridge
 
 volumes:
   postgres_data:
-    driver: local
