--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@
 # ==============================================
 # PostgreSQL Database
 # ==============================================
-DB_HOST=localhost
+DB_HOST=marigold-postgres
 DB_PORT=5432
 DB_NAME=marigold_rag
 DB_USER=postgres
@@ -21,6 +21,6 @@ PGWEB_PORT=8081
 # ==============================================
 # Ollama (Embedding Model)
 # ==============================================
-OLLAMA_KEEP_ALIVE=5m
-OLLAMA_URL=http://ollama:11434/api/embed
+OLLAMA_KEEP_ALIVE=10m
+OLLAMA_URL="http://marigold-ollama:11434/api/embed"
 OLLAMA_MODEL=nomic-embed-text
