--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -2,7 +2,7 @@ FROM ollama/ollama:latest
 
 # Create entrypoint script to pull model on startup
 RUN mkdir -p /app
-COPY ollama-entrypoint.sh /app/entrypoint.sh
+COPY ollama/ollama-entrypoint.sh /app/entrypoint.sh
 RUN chmod +x /app/entrypoint.sh
 
 EXPOSE 11434
